[tool.poetry]
name = "static-distributor"
version = "0.1.0"
description = ""
authors = ["Any4rd <any4rd@gmail.com>"]
readme = "README.md"
packages = [{include = "static_distributor"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
requests = "^2.28.1"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
dependency-injector = "^4.40.0"
loguru = "^0.6.0"
aiopg = "^1.4.0"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
